add react url app for athenticated users to see their urls

--- a/app/views/urls/my_url.html.slim
+++ b/app/views/urls/my_url.html.slim
@@ -1,29 +1,2 @@
-.col-md-6.col-md-offset-3
-  .main-card
-  - if @urls.present?
-    h2.text-center Checkout your other links
-    - @urls.each do |url|
-      form.simple_form
-      .form-group.string.disabled
-        label.string.disabled.control-label for="url_url"  Your original URL was:
-        input#url_url.string.disabled.form-control disabled="disabled" value="#{url.url}"
-      br
-      br
-      p.larger
-        | Your shortened URL is: &nbsp;
-        span#short-url data-placement="bottom" #{request.base_url}/#{url.short_url}
-      br
-      br
-  - else
-      br
-      br
-      p.larger
-        | You have not created a url yet create one here: &nbsp;
-      br
-      br
-      .col-md-6.col-md-offset-3
-        .main-card
-          h2.text-center Shrink your links!
-          = form_for @new_url, html: { class: "text-center" } do |f|
-            = f.text_field :url, as: :string, placeholder: "Enter the URL you want to shorten...", label: false
-            = f.submit "Shorten!", class: "btn btn-green"
+h1 My To Do Items
+#url-app
