--- a/app/views/shared/_navigation.html.slim
+++ b/app/views/shared/_navigation.html.slim
@@ -1,7 +1,7 @@
 /! app/views/shared/_navigation.html.erb
 nav.navbar.navbar-expand-lg.navbar-light.bg-light.mb-5
   .container
-    = link_to "Rails React Example", root_path, class: "navbar-brand"
+    = link_to "Home", root_path, class: "navbar-brand"
     button.navbar-toggler aria-controls="navbarNav" aria-expanded="false" aria-label=("Toggle navigation") data-target="#navbarNav" data-toggle="collapse" type="button" 
       span.navbar-toggler-icon
     #navbarNav.collapse.navbar-collapse.justify-content-end
