--- a/app/views/urls/shortened.html.slim
+++ b/app/views/urls/shortened.html.slim
@@ -22,4 +22,6 @@
     - else
       p
         = link_to 'Sign in', new_user_session_path
+        |  &nbsp; Or &nbsp;
         = link_to 'Register', new_user_session_path
+        |  &nbsp; to manage  your urls
