add docker #add error messages

--- a/app/views/urls/shortened.html.slim
+++ b/app/views/urls/shortened.html.slim
@@ -1,5 +1,5 @@
 .form-card
-  h3.text-center Well done, your link has been shortened!
+  h3.text-center Link has been shortened!
   h3.text-center Share it now!
   .col-md-6
     form.simple_form
