--- a/app/views/urls/shortened.html.slim
+++ b/app/views/urls/shortened.html.slim
@@ -24,4 +24,4 @@
         = link_to 'Sign in', new_user_session_path
         |  &nbsp; Or &nbsp;
         = link_to 'Register', new_user_session_path
-        |  &nbsp; to manage  your urls
+        |  &nbsp; to manage  your urls and even create custome short url! Cool.
